--- a/react-caua-apps/index.html
+++ b/react-caua-apps/index.html
@@ -49,7 +49,7 @@
                 Cauã Martins Falcão <br class="md:hidden"> <span class="text-gradient-purple">Fontes da Silva</span>
             </h1>
             <p class="text-xl md:text-2xl text-gray-300 mb-8">
-                Estudante de Técnico em Informática
+                Estudante Técnico de Informática
             </p>
             <p class="text-lg text-gray-400 mb-12 leading-relaxed">
                 Desenvolvedor apaixonado por tecnologia, com foco em desenvolvimento web,
@@ -220,15 +220,15 @@
             </p>
             <div class="flex flex-wrap justify-center gap-6">
                 
-                <a href="mailto:seu.email@example.com" class="flex items-center gap-2 px-6 py-3 border border-purple-600 text-purple-300 hover:bg-purple-900/40 rounded-lg shadow-md transition-all duration-300">
+                <a href="cauafmartins01@gmail.com" class="flex items-center gap-2 px-6 py-3 border border-purple-600 text-purple-300 hover:bg-purple-900/40 rounded-lg shadow-md transition-all duration-300">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg>
                     Email
                 </a>
-                <a href="https://github.com/SEU_USUARIO" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 px-6 py-3 border border-purple-600 text-purple-300 hover:bg-purple-900/40 rounded-lg shadow-md transition-all duration-300">
+                <a href="https://github.com/CauaFMartins" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 px-6 py-3 border border-purple-600 text-purple-300 hover:bg-purple-900/40 rounded-lg shadow-md transition-all duration-300">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.44-.78-3.5.25-1.02.23-2.3-1-3.4v.5c-.72 1.3-3.2 1.85-4.4.84-1.2-.5-.5-1.9-.3-2.9C11 4.5 9 5 8 5.4c-1.55 1.7-2 4.1-2 5.5v.5c0 3.5 3 5.5 6 5.5-.34.4-.67.8-1 1.3v4"/><path d="M22 12C22 7.4 18.6 4 14 4H2V20H14c4.6 0 8-3.4 8-8"/></svg>
                     GitHub
                 </a>
-                <a href="https://linkedin.com/in/SEU_USUARIO" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 px-6 py-3 border border-purple-600 text-purple-300 hover:bg-purple-900/40 rounded-lg shadow-md transition-all duration-300">
+                <a href="https://www.linkedin.com/in/cau%C3%A3-martins-149768260?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BvLGkLK4qTjmu2o7Gc17rmQ%3D%3D" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 px-6 py-3 border border-purple-600 text-purple-300 hover:bg-purple-900/40 rounded-lg shadow-md transition-all duration-300">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-linkedin"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect width="4" height="12" x="2" y="9"/><circle cx="4" cy="4" r="2"/></svg>
                     LinkedIn
                 </a>
